# mcp-rs

./: .gitignore  Cargo.toml  LICENSE  release copy.toml  release.toml  test_sse.sh
crates/mcp-client/: Cargo.toml
crates/mcp-client-rs/: Cargo.toml
crates/mcp-client-rs/src/: client.rs
crates/mcp-client-rust/: Cargo.toml
crates/mcp-client-rust/examples/: README.md  README_SSE.md  simple_sse_client.rs  sse_async_notifications.rs  sse_client_mcp_service.rs  sse_client_test.rs  sse_client_with_messages.rs  sse_server_test.rs  sse_simple_test.rs
crates/mcp-client-rust/src/: client.rs  error.rs  lib.rs  registry.rs
crates/mcp-client-rust/src/transport/: base.rs  message.rs  mod.rs  traits.rs  types.rs
crates/mcp-client-rust/src/transport/impls/: sse.rs
crates/mcp-client/src/: client.rs  lib.rs
crates/mcp-core/: Cargo.toml
crates/mcp-core-rs/: Cargo.toml
crates/mcp-core-rs/src/: content.rs  error.rs  lib.rs  prompt.rs  resource.rs  tool.rs
crates/mcp-core-rs/src/protocol/: message.rs  mod.rs  result.rs
crates/mcp-core-rs/src/utils/: parse_message.rs
crates/mcp-core/src/: annotation.rs  capabilities.rs  lib.rs  prompt.rs  protocol.rs  resource.rs  result.rs  role.rs
crates/mcp-core/src/protocol/: constants.rs  error.rs  message.rs  mod.rs
crates/mcp-core/src/utils/: cleanup.rs  mod.rs
crates/mcp-error/: Cargo.toml
crates/mcp-error-rs/: Cargo.toml
crates/mcp-error-rs/src/: lib.rs
crates/mcp-error/src/: lib.rs
crates/mcp-macros/: Cargo.toml
crates/mcp-macros/src/: lib.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server-rs/: .gitignore  Cargo.toml
crates/mcp-server-rs/src/: error.rs  lib.rs  server.rs
crates/mcp-server-rs/src/router/: ext.rs  mod.rs  service.rs  traits.rs
crates/mcp-server-rs/src/router/impls/: chart.rs  counter.rs  mod.rs
crates/mcp-server-rs/src/service/: capabilities.rs  ext.rs  mod.rs  router_variant.rs  traits.rs
crates/mcp-server-rs/src/service/impls/: chart.rs  counter.rs
crates/mcp-server-rs/src/transport/: byte.rs  sse.rs  traits.rs
crates/mcp-server/src/: server.rs
crates/mcp-server/src/router/: capabilities.rs  mod.rs  service.rs  traits.rs
crates/mcp-tools/: Cargo.toml
crates/mcp-tools-rs/: Cargo.toml
crates/mcp-tools-rs/src/: lib.rs
crates/mcp-tools-rs/src/service/: corpus.rs  oss.rs
crates/mcp-tools-rs/src/tools/: chart.rs  mod.rs  prompt.rs  web_search.rs
crates/mcp-tools-rs/src/tools/file/: mod.rs
crates/mcp-transport/: Cargo.toml
crates/mcp-transport-rs/: Cargo.toml
crates/mcp-transport-rs/src/client/: mod.rs
crates/mcp-transport-rs/src/server/: mod.rs  sse.rs
crates/mcp-transport/src/client/: message.rs  traits.rs
crates/mcp-transport/src/client/impls/: sse copy.rs  sse.rs
crates/mcp-transport/src/server/: byte.rs  mod.rs  sse.rs  traits.rs
examples/client/: Cargo.toml
examples/client/src/: main.rs
examples/server/: Cargo.toml
examples/server/src/: axum.rs  main.rs  sse_axum copy.rs  sse_axum.rs
examples/server/src/common/: counter.rs  mod.rs
examples/tools/: .gitignore  Cargo.toml
examples/tools/examples/: s3_read.rs
examples/tools/src/: main.rs  web_search.rs
