

[workspace]
members = ["crates/*"]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/arthasyou/mcp-rs"
description = "Rust MCP"

[workspace.dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
thiserror = "2"
tokio = { version = "1" }
once_cell = "1"
uuid = { version = "1.17", features = ["v4"] }
futures = "0.3"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
base64 = "0.22"
pin-project = "1"
tracing = { version = "0.1", features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tower = "0.5"
tower-service = "0.3"
service_utils_rs = { version = "0.3.20", features = ["request"] }
eventsource-client = { version = "0.15" }
