[workspace]
resolver = "3"

members = [
    "crates/mcp-core-rs",
    "crates/mcp-client-rust",
    "crates/mcp-server-rs",
    "crates/mcp-tools-rs",
    "crates/mcp-error-rs",
]

exclude = ["examples"]

[workspace.package]
edition = "2024"
version = "0.1.1"
license = "MIT"
repository = "https://github.com/arthasyou/mcp-rs"
description = "Rust MCP"


[workspace.dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
thiserror = "2"
tokio = { version = "1" }
tokio-util = { version = "0.7" }
once_cell = "1"
uuid = { version = "1.17", features = ["v4"] }
futures = "0.3"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
base64 = "0.22"
pin-project = "1"
tracing = { version = "0.1", features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tower = "0.5"
tower-service = "0.3"
service_utils_rs = { version = "0.3.20", features = ["request"] }
eventsource-client = { version = "0.15" }
model-gateway-rs = { path = "/Users/ancient/src/rust/model-gateway-rs" }
minio = { version = "0.3" }

mcp-error = { package = "mcp-error-rs", path = "crates/mcp-error-rs", version = "0.1.1" }
mcp-core = { package = "mcp-core-rs", path = "crates/mcp-core-rs", version = "0.1.1" }
mcp-client = { package = "mcp-client-rust", path = "crates/mcp-client-rust", version = "0.1.1" }
mcp-server = { package = "mcp-server-rs", path = "crates/mcp-server-rs", version = "0.1.1" }
mcp-tools = { package = "mcp-tools-rs", path = "crates/mcp-tools-rs", version = "0.1.1" }
