[package]
name = "mcp-client-rust"
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/arthasyou/mcp-rs"
description = "Client for the Model Context Protocol (MCP) using HTTP and SSE"

[dependencies]
mcp-error.workspace = true
mcp-core = { workspace = true }

tower-service = { workspace = true }
tracing = { workspace = true, features = ["std"] }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
futures = { workspace = true }
once_cell = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
eventsource-client = { workspace = true }
url = { workspace = true }
service_utils_rs = { workspace = true, features = ["request"] }
tokio-util = { workspace = true, features = ["io"] }
