[package]
name = "mcp-client-rust"
description = "Client for the Model Context Protocol (MCP) using HTTP and SSE"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mcp-error.workspace = true
mcp-core = { workspace = true }

tower-service = { workspace = true }
tracing = { workspace = true, features = ["std"] }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
futures = { workspace = true }
once_cell = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
eventsource-client = { workspace = true }
url = { workspace = true }
service_utils_rs = { workspace = true, features = ["request"] }
tokio-util = { workspace = true, features = ["io"] }

[dev-dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio-stream = "0.1"
chrono = "0.4"
tracing-subscriber = "0.3"
