[package]
name = "mcp-client"
version = "0.1.0"
edition = "2024"

[dependencies]
mcp-core = { path = "../mcp-core" }
mcp-error = { path = "../mcp-error" }
mcp-transport = { path = "../mcp-transport" }

tower-service.workspace = true
tracing.workspace = true
serde_json.workspace = true
# tokio = { workspace = true, features = ["full", "io-util"] }
futures.workspace = true
