[package]
name = "mcp-client-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/arthasyou/mcp-rs"
# publish = true

[dependencies]
mcp-core-rs = { path = "../mcp-core" }
mcp-error-rs = { path = "../mcp-error-rs" }
mcp-transport-rs = { path = "../mcp-transport" }

tower-service = "0.3"
tracing = { version = "0.1", features = ["std"] }
serde_json = "1"
futures = "0.3"
