[package]
name = "mcp-core-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/arthasyou/mcp-rs"
description = "Core types for Model Context Protocol"

[dependencies]
mcp-error-rs = { version = "0.1.0" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
base64 = "0.22"
tokio = { version = "1" }
futures = "0.3"
