[package]
name = "mcp-core-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/arthasyou/mcp-rs"
description = "Core types for Model Context Protocol"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
url.workspace = true
base64.workspace = true
tokio.workspace = true
futures.workspace = true
