[package]
name = "mcp-core-rs"
description = "Core types for Model Context Protocol"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mcp-error.workspace = true

serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
url.workspace = true
base64.workspace = true
tokio.workspace = true
futures.workspace = true
