[package]
name = "mcp-core"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types for Model Context Protocol"

[dependencies]
mcp-error = { path = "../mcp-error" }

serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
url.workspace = true
base64.workspace = true
tokio.workspace = true
futures.workspace = true
