[package]
name = "mcp-error-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/arthasyou/mcp-rs"
description = "Error types for Model Context Protocol"

[dependencies]
thiserror = "2"
url = "2"
serde_json = "1"
service_utils_rs = { version = "0.3.20", features = ["request"] }
