[package]
name = "mcp-error-rs"
description = "Error types for Model Context Protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = "2"
url = "2"
serde_json = "1"
service_utils_rs = { version = "0.3.20", features = ["request"] }
model-gateway-rs.workspace = true
minio = { version = "0.3" }
