[package]
name = "mcp-error"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "Error types for Model Context Protocol"

[dependencies]
thiserror.workspace = true
url.workspace = true
serde_json.workspace = true
service_utils_rs.workspace = true
