[package]
name = "mcp-server-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/arthasyou/mcp-rs"
description = "Server for the Model Context Protocol (MCP) using HTTP and SSE"

[dependencies]
mcp-core.workspace = true

thiserror.workspace = true
tracing = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
async-trait.workspace = true
pin-project.workspace = true
