[package]
name = "mcp-server-rs"
description = "Server for the Model Context Protocol (MCP) using HTTP and SSE"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mcp-error.workspace = true
mcp-core.workspace = true

tracing = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
async-trait.workspace = true
pin-project.workspace = true
