[package]
name = "mcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mcp-core = { path = "../mcp-core" }
mcp-error = { path = "../mcp-error" }
mcp-transport = { path = "../mcp-transport" }

tower-service.workspace = true
tracing.workspace = true
serde_json.workspace = true
# tokio = { workspace = true, features = ["full", "io-util"] }
futures.workspace = true
