[package]
name = "mcp-server-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[dependencies]
mcp-core-rs = { path = "../mcp-core" }
mcp-error-rs = { path = "../mcp-error" }
mcp-transport-rs = { path = "../mcp-transport" }

tower-service.workspace = true
tracing.workspace = true
serde_json.workspace = true
# tokio = { workspace = true, features = ["full", "io-util"] }
futures.workspace = true
