[package]
name = "mcp-tools-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/arthasyou/mcp-rs"
description = "Tools for Model Context Protocol"

[dependencies]
mcp-core.workspace = true
mcp-server.workspace = true

scraper = { version = "0.23" }
reqwest = { version = "0.12" }
urlencoding = { version = "2" }
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
tokio.workspace = true
rust-s3.workspace = true
