[package]
name = "mcp-tools-rs"
description = "Tools for Model Context Protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mcp-error.workspace = true
mcp-core.workspace = true
mcp-server.workspace = true

scraper = { version = "0.23" }
reqwest = { version = "0.12" }
urlencoding = { version = "2" }
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
tokio.workspace = true
model-gateway-rs.workspace = true
minio.workspace = true
service_utils_rs = { workspace = true, features = ["request"] }
