[package]
name = "mcp-transport-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/arthasyou/mcp-rs"
description = "Transport layer for the Model Context Protocol using SSE and POST"


[dependencies]
mcp-core-rs = { version = "0.1.0" }
mcp-error-rs = { version = "0.1.0" }

pin-project = "1"
tokio = { version = "1", features = ["full", "io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
serde_json = "1"
tracing = { version = "0.1", features = ["std"] }
async-trait = "0.1"
service_utils_rs = { version = "0.3.20", features = ["request"] }
eventsource-client = "0.15"
url = "2"
