[package]
name = "mcp-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mcp-core = { path = "../mcp-core" }
mcp-error = { path = "../mcp-error" }

pin-project.workspace = true
tokio.workspace = true
futures.workspace = true
serde_json.workspace = true
tracing.workspace = true
