[package]
name = "mcp-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mcp-core = { path = "../mcp-core" }
mcp-error = { path = "../mcp-error" }

pin-project.workspace = true
tokio = { workspace = true, features = ["full", "io-util"] }
tokio-util = { workspace = true, features = ["io"] }
futures.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait.workspace = true
service_utils_rs = { workspace = true }
eventsource-client.workspace = true
url.workspace = true
