[package]
name = "client"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
rand = { version = "0.9", features = ["std"] }
serde.workspace = true
futures.workspace = true
serde_json.workspace = true
mcp-core = { path = "../../crates/mcp-core" }
mcp-client = { path = "../../crates/mcp-client" }
mcp-error = { path = "../../crates/mcp-error" }
mcp-transport = { path = "../../crates/mcp-transport" }
tokio-util = { version = "0.7" }
