[package]
name = "client"
edition = "2024"
version = "0.1.0"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
rand = { version = "0.9", features = ["std"] }
serde.workspace = true
futures.workspace = true
serde_json.workspace = true
mcp-core-rs = { path = "../../crates/mcp-core-rs" }
mcp-client-rs = { package = "mcp-client-rust", path = "../../crates/mcp-client-rust" }
mcp-error-rs = { path = "../../crates/mcp-error-rs" }
tokio-util = { version = "0.7" }
