[package]
name = "server"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
axum = { version = "0.8", features = ["json", "macros"] }
tracing.workspace = true
tracing-subscriber.workspace = true
rand = { version = "0.9", features = ["std"] }
serde.workspace = true
futures.workspace = true
serde_json.workspace = true
mcp-core-rs = { path = "../../crates/mcp-core" }
mcp-server-rs = { path = "../../crates/mcp-server" }
mcp-error-rs = { path = "../../crates/mcp-error-rs" }
mcp-transport-rs = { path = "../../crates/mcp-transport" }
tokio-util = { version = "0.7" }
tokio-stream = { version = "0.1", features = ["sync"] }

[[example]]
name = "axum"
path = "src/axum.rs"

[[example]]
name = "sse_axum"
path = "src/sse_axum.rs"
