[package]
name = "tools"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1"
mcp-tools-rs = { path = "../../crates/mcp-tools-rs" }

[[example]]
name = "web_search"
path = "src/web_search.rs"
